# OneLink

./: .gitignore  README.md
repo/: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md
repo/.github/workflows/: ci.yml
repo/ai-platform/evaluators/: README.md
repo/ai-platform/inference/: README.md
repo/ai-platform/prompts/: README.md
repo/apps/admin/: README.md
repo/apps/app/: Cargo.toml
repo/apps/app-server/: Cargo.toml  README.md
repo/apps/app-server/src/: analytics_events.rs  compliance_audit.rs  config.rs  contract_freeze.rs  design_tokens.rs  dto.rs  i18n.rs  lib.rs  main.rs  region_gate.rs  router.rs  screens.rs  state.rs
repo/apps/app-server/tests/: integration_test.rs  mock_bff.rs
repo/apps/app/src/: config.rs  i18n.rs  lib.rs  main.rs  router.rs
repo/apps/mobile/: README.md  app.json  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json
repo/apps/mobile/android/: settings.gradle
repo/apps/mobile/ios/: Podfile
repo/apps/web/: README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
repo/apps/web/mocks/: chat-init.json  find-intent.json  find-results.json  home.json  login.json  onboarding.json  profile.json  register.json
repo/apps/web/scripts/: verify-openapi-mock.mjs
repo/apps/web/src/: main.tsx  prelaunch.web.smoke.test.tsx
repo/data-platform/db-schema/: README.md
repo/data-platform/db-schema/drafts/: 001_identity.sql  002_profile.sql  003_context.sql  003_context_activation.sql  003_context_idempotency.sql  004_ai_chat.sql  005_dm.sql  006_question.sql  008_safety.sql  010_optimization.sql  README.md
repo/data-platform/db-schema/migrations/: README.md  V001__identity.sql  V002__profile.sql  V003__context.sql  V006__runtime_observability.sql  V007__ai_chat.sql  V009__question.sql  V010__match.sql  V013__model_gateway.sql
repo/data-platform/event-schemas/: README.md  analytics.chat.message.received.v1.json  analytics.chat.message.sent.v1.json  analytics.dm.message.sent.v1.json  analytics.find.intent.submitted.v1.json  analytics.page.viewed.v1.json  analytics.profile.confirmation.shown.v1.json  analytics.recommendation.exposed.v1.json  analytics.report.submitted.v1.json  chat.user_message.created.v1.json  context.memory.extracted.v1.json  context.memory.summary.updated.v1.json  dm.message.created.v1.json  identity.user.registered.v1.json  match.request.submitted.v1.json  match.result_set.served.v1.json  model.invocation.completed.v1.json  profile.embedding.updated.v1.json  profile.fact.upserted.v1.json  profile.memory_projection.requested.v1.json  question.answered.v1.json  safety.assessment.completed.v1.json  social.follow.created.v1.json
repo/data-platform/tracking-events/: README.md  client-events-v1.json
repo/deploy/ecs/: README.md  onelink.env.example
repo/deploy/ecs/nginx/: onelink.cool.http.conf  onelink.cool.https.conf
repo/deploy/ecs/systemd/: onelink@.service
repo/docs/: high-risk-content-review-record.md  phase10-launch-checklist.md  region-data-residency.md
repo/infra/ci/: README.md
repo/infra/docker/: README.md  docker-compose.yml
repo/infra/kubernetes/: README.md
repo/infra/mock/: README.md  mock-api.yaml  start-mock.sh
repo/platform/contracts/: README.md
repo/platform/contracts/internal/: README.md  context-service.yaml  model-gateway.yaml
repo/platform/contracts/openapi/: README.md  ai-chat-service.yaml  bff.yaml  dm-service.yaml  identity-service.yaml  match-service.yaml  profile-service.yaml  question-service.yaml  safety-service.yaml
repo/platform/design-system/: README.md  tokens.json
repo/platform/migration-runner/: Cargo.toml
repo/platform/migration-runner/src/: main.rs
repo/platform/observability/: README.md
repo/platform/shared-libs/: README.md
repo/platform/shared-libs/onelink-capacity-metrics/: Cargo.toml
repo/platform/shared-libs/onelink-event-envelope/: Cargo.toml
repo/platform/shared-libs/onelink-internal-auth/: Cargo.toml
repo/scripts/: README.md  apply-ddl.sh  benchmark-asmr-lite-v1.sh  benchmark-asmr-lite-v2.1.sh  benchmark-asmr-lite-v2.2.sh  benchmark-asmr-lite-v2.sh  onelink-ecs-cert.sh  onelink-ecs-deploy.sh  onelink-ecs-preflight-check.sh  prelaunch_bff_smoke.py  run-local-vertical-slice-terminals.sh  smoke-chat-memory-activation.sh  smoke-chat-memory-context-log.sh  smoke-chat-memory-forgetting-decisions.sh  smoke-chat-memory-persistence.sh  smoke-chat-memory-profile-phase-a.sh  smoke-chat-memory-profile.sh  smoke-chat-memory-runtime-observability.sh  smoke-persistence-docker.sh  smoke-persistence-e2e.sh  smoke-questionnaire-profile.sh
repo/scripts/capacity/: ROLLBACK-PROCEDURE.md  benchmark-core-links.sh  fault-injection.sh
repo/scripts/lib/: asmr-benchmark-v2-common.sh
repo/scripts/local/: run-chat-memory-profile-slice.sh
repo/scripts/prelaunch/: collect_integration_readiness.py  collect_preprod_evidence.py  run_local_app_server_smoke.sh  run_local_bff_smoke.sh  run_local_prelaunch_suite.sh  run_local_preprod_collector.sh  write_platform_closeout.py
repo/services/ai-chat-service/: Cargo.toml  README.md
repo/services/ai-chat-service/src/: config.rs  health.rs  lib.rs  main.rs
repo/services/api-gateway/: Cargo.toml  README.md
repo/services/bff/: Cargo.toml  README.md
repo/services/bff/src/: lib.rs  (+4 more)
repo/services/context-service/: Cargo.toml  README.md
repo/services/dm-service/: Cargo.toml  README.md
repo/services/identity-service/: Cargo.toml  README.md
repo/services/match-service/: Cargo.toml  README.md
repo/services/model-gateway/: Cargo.toml  README.md
repo/services/profile-service/: Cargo.toml  README.md
repo/services/question-service/: Cargo.toml  README.md
repo/services/safety-service/: Cargo.toml  README.md
repo/tests/contract/: Cargo.toml  README.md
repo/tests/e2e/: README.md
repo/tests/integration/: ASMR_LITE_BENCHMARK_V2.1.md  ASMR_LITE_BENCHMARK_V2.md  CHAT_MEMORY_PROFILE_SLICE.md  Cargo.toml  README.md
repo/tests/persistence_smoke/: Cargo.toml
repo/tests/process_runtime/: Cargo.toml
(+335 files in other folders)
