# OneLink MVP — Rust workspace (skeleton)
# See OneLink/Rules/18-COMPOSER-2-FAST-EXECUTION-BRIEF.md

[workspace]
resolver = "2"
members = [
    "tests/integration",
    "platform/shared-libs/onelink-event-envelope",
    "services/api-gateway",
    "services/bff",
    "services/identity-service",
    "services/profile-service",
    "services/ai-chat-service",
    "services/context-service",
    "services/dm-service",
    "services/question-service",
    "services/match-service",
    "services/safety-service",
    "services/model-gateway",
]

[workspace.dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal"] }
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "serde"] }
