[package]
name = "onelink-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace"] }
onelink-app-server = { path = "../app-server" }

[dev-dependencies]
tower = { workspace = true }
http-body-util = "0.1"