[package]
name = "ai-chat-service"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "ai-chat-service"
path = "src/main.rs"

[lib]
name = "ai_chat_service"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
onelink-event-envelope = { path = "../../platform/shared-libs/onelink-event-envelope" }
