[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[lib]
name = "api_gateway"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
onelink-internal-auth = { path = "../../platform/shared-libs/onelink-internal-auth" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
