[package]
name = "bff"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "bff"
path = "src/main.rs"

[lib]
name = "bff"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
