[package]
name = "bff"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "bff"
path = "src/main.rs"

[lib]
name = "bff"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
onelink-internal-auth = { path = "../../platform/shared-libs/onelink-internal-auth" }
onelink-capacity-metrics = { path = "../../platform/shared-libs/onelink-capacity-metrics" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
