[package]
name = "identity-service"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "identity-service"
path = "src/main.rs"

[lib]
name = "identity_service"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = [
    "with-uuid-1",
    "with-chrono-0_4",
    "with-serde_json-1",
] }
onelink-internal-auth = { path = "../../platform/shared-libs/onelink-internal-auth" }
onelink-event-envelope = { path = "../../platform/shared-libs/onelink-event-envelope" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
reqwest = { version = "0.13", features = ["json", "blocking", "rustls"] }
