[package]
name = "model-gateway"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "model-gateway"
path = "src/main.rs"

[lib]
name = "model_gateway"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
