[package]
name = "model-gateway"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "model-gateway"
path = "src/main.rs"

[lib]
name = "model_gateway"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
onelink-internal-auth = { path = "../../platform/shared-libs/onelink-internal-auth" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
reqwest = { workspace = true }
bff = { path = "../bff" }
identity-service = { path = "../identity-service" }
