[package]
name = "question-service"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "question-service"
path = "src/main.rs"

[lib]
name = "question_service"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
