[package]
name = "onelink-persistence-smoke"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { workspace = true }
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = [
    "with-uuid-1",
    "with-chrono-0_4",
    "with-serde_json-1",
] }
uuid = "1"

[[test]]
name = "persistence_smoke"
path = "tests/persistence_smoke.rs"

[[test]]
name = "per_service_persistence_smoke"
path = "tests/per_service_persistence_smoke.rs"
